--- a/styles/form.module.css
+++ b/styles/form.module.css
@@ -1,11 +1,15 @@
 .form{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
     
 }
 
+.form > div {
+    display: flex;
+}
 .form a{
     display: flex;
     flex:1;
